# research_model_swarm

./: README.md  hello.py  pyproject.toml
src/: __main__.py
src/core/: config.py
src/modules/: experts.py  metrics.py
src/pipelines/: base.py
src/pipelines/nodes/: init_node.py
src/utils/: setup_logger.py
