[project]
name = "research-model-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.53.0",
    "typer>=0.16.0",
]
